<resources>
    <string name="app_name">HW8</string>


    <string name="default_string">Default String</string>
    <string name="widget_button">Push me!!</string>


    <string name="config_show_word">The word want to display:</string>
    <string name="config_show_period">The second want to update:</string>

    <string name="submit">Submit</string>

    <string name="config_show_time_zone">Time zone</string>
    <string name="config_show_time">Time:</string>

    <string name="menu_about">About</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_setting_size">Size</string>
    <string name="menu_setting_light">Light</string>
    <string name="menu_exit">Exit</string>


    <string name="about">寫過才知道!</string>
</resources>
